# joint-lidar-camera-calib

./: README.md
BALM/: CMakeLists.txt
BALM/config/: conduct_BA.yaml  registration.yaml
BALM/launch/: conduct_BA.launch  registration.launch
BALM/src/benchmark/: bavoxel.hpp  benchmark_realworld.cpp  conduct_BA.cpp  registration.cpp
joint_lidar_camera_calib/: CMakeLists.txt  package.xml
joint_lidar_camera_calib/include/: calib.hpp
joint_lidar_camera_calib/launch/: calib.launch  hand_eye_calib.launch
joint_lidar_camera_calib/sample_data/hand_eye_calib/: camera_pose.txt  lidar_pose.txt
joint_lidar_camera_calib/src/: calib.cpp  hand_eye_calib.cpp
